changes not reviewed, pushing for later

--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
+  "name": "pdf-service-api-docs",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "rspress dev --port 3000 --host 0.0.0.0",
+    "dev": "rspress dev",
     "build": "rspress build",
     "preview": "rspress preview"
   },
-  "dependencies": {},
-  "devDependencies": {
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
     "rspress": "^1.27.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
